--- a/.gitignore
+++ b/.gitignore
@@ -76,8 +76,9 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default but include data/raw folder
-data/
-!data/raw/
+data/interim/
+data/processed/
+data/external/
 
 # Mac OS-specific storage files
 .DS_Store
