--- a/PH_requirements.yml
+++ b/PH_requirements.yml
@@ -28,8 +28,8 @@ dependencies:
   - brotlipy=0.7.0=py39h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2023.7.22=hbcca054_0
-  - certifi=2023.7.22=pyhd8ed1ab_0
+  - ca-certificates=2023.08.22=h06a4308_0
+  - certifi=2023.7.22=py39h06a4308_0
   - cffi=1.15.1=py39h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - comm=0.1.2=py39h06a4308_0
@@ -40,6 +40,7 @@ dependencies:
   - debugpy=1.6.7=py39h6a678d5_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - dill=0.3.6=py39h06a4308_0
+  - et_xmlfile=1.1.0=py39h06a4308_0
   - exceptiongroup=1.0.4=py39h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
   - filelock=3.9.0=py39h06a4308_0
@@ -123,7 +124,8 @@ dependencies:
   - numexpr=2.8.7=py39h85018f9_0
   - numpy=1.24.3=py39hf6e8229_1
   - numpy-base=1.24.3=py39h060ed82_1
-  - openssl=3.1.3=hd590300_0
+  - openpyxl=3.0.10=py39h5eee18b_0
+  - openssl=3.0.11=h7f8727e_2
   - orc=1.7.4=hb3bc3d3_1
   - packaging=23.1=py39h06a4308_0
   - pandas=2.0.3=py39h1128e8f_0
