--- a/PH_requirements.yml
+++ b/PH_requirements.yml
@@ -1,5 +1,6 @@
 name: /home/morty/Projects/Thesis/PH
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
@@ -19,9 +20,11 @@ dependencies:
   - aws-checksums=0.1.11=h5eee18b_2
   - aws-sdk-cpp=1.8.185=h721c034_1
   - backcall=0.2.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.12.2=py39h06a4308_0
   - bio-embeddings=0.2.2=pyhd8ed1ab_10
   - biopython=1.81=py39h72bdee0_0
   - blas=1.0=mkl
+  - bleach=4.1.0=pyhd3eb1b0_0
   - boost-cpp=1.82.0=hdb19cb5_2
   - bottleneck=1.3.5=py39h7deecbd_0
   - brotli=1.0.9=h9c3ff4c_4
@@ -39,7 +42,9 @@ dependencies:
   - datasets=2.12.0=py39h06a4308_0
   - debugpy=1.6.7=py39h6a678d5_0
   - decorator=5.1.1=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
   - dill=0.3.6=py39h06a4308_0
+  - entrypoints=0.4=py39h06a4308_0
   - et_xmlfile=1.1.0=py39h06a4308_0
   - exceptiongroup=1.0.4=py39h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
@@ -70,8 +75,10 @@ dependencies:
   - jinja2=3.1.2=pyhd8ed1ab_1
   - joblib=1.3.2=pyhd8ed1ab_0
   - jpeg=9e=h0b41bf4_3
+  - jsonschema=4.17.3=py39h06a4308_0
   - jupyter_client=8.1.0=py39h06a4308_0
   - jupyter_core=5.3.0=py39h06a4308_0
+  - jupyterlab_pygments=0.1.2=py_0
   - kiwisolver=1.4.5=py39h7633fee_1
   - krb5=1.20.1=h143b758_1
   - lcms2=2.15=hfd0df8a_0
@@ -101,13 +108,17 @@ dependencies:
   - libtiff=4.5.1=h6a678d5_0
   - libwebp=1.3.2=h11a3e52_0
   - libwebp-base=1.3.2=hd590300_0
+  - libxml2=2.10.4=hf1b16e4_1
+  - libxslt=1.1.37=h5eee18b_1
   - llvm-openmp=14.0.6=h9e868ea_0
   - llvmlite=0.40.0=py39he621ea3_0
   - lock=2018.3.25.2110=py39hf3d152e_4
+  - lxml=4.9.3=py39hdbbb534_0
   - lz4-c=1.9.4=h6a678d5_0
   - markupsafe=2.1.3=py39hd1e30aa_1
   - matplotlib-base=3.8.0=py39he9076e7_1
   - matplotlib-inline=0.1.6=py39h06a4308_0
+  - mistune=0.8.4=py39h27cfd23_1000
   - mkl=2023.1.0=h213fc3f_46343
   - mkl-service=2.4.0=py39h5eee18b_1
   - mkl_fft=1.3.8=py39h5eee18b_0
@@ -116,6 +127,9 @@ dependencies:
   - multidict=6.0.2=py39h5eee18b_0
   - multiprocess=0.70.14=py39h06a4308_0
   - munkres=1.1.4=pyh9f0ad1d_0
+  - nbclient=0.5.13=py39h06a4308_0
+  - nbconvert=6.5.4=py39h06a4308_0
+  - nbformat=5.9.2=py39h06a4308_0
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.5.6=py39h06a4308_0
   - networkx=3.1=pyhd8ed1ab_0
@@ -129,6 +143,7 @@ dependencies:
   - orc=1.7.4=hb3bc3d3_1
   - packaging=23.1=py39h06a4308_0
   - pandas=2.0.3=py39h1128e8f_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
@@ -146,9 +161,11 @@ dependencies:
   - pynndescent=0.5.10=pyh1a96a4e_0
   - pyopenssl=23.2.0=py39h06a4308_0
   - pyparsing=3.1.1=pyhd8ed1ab_0
+  - pyrsistent=0.18.0=py39heee7806_0
   - pysocks=1.7.1=py39h06a4308_0
   - python=3.9.18=h955ad1f_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.16.2=py39h06a4308_0
   - python-slugify=8.0.1=pyhd8ed1ab_2
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - python-xxhash=2.0.2=py39h5eee18b_1
@@ -171,6 +188,7 @@ dependencies:
   - six=1.16.0=pyhd3eb1b0_1
   - smart_open=6.4.0=pyhd8ed1ab_0
   - snappy=1.1.9=h295c915_0
+  - soupsieve=2.5=py39h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - sympy=1.12=pyh04b8f61_3
@@ -178,6 +196,7 @@ dependencies:
   - tenacity=8.2.3=pyhd8ed1ab_0
   - text-unidecode=1.3=pyhd8ed1ab_1
   - threadpoolctl=3.2.0=pyha21a80b_0
+  - tinycss2=1.2.1=py39h06a4308_0
   - tk=8.6.12=h1ccaba5_0
   - tokenizers=0.13.3=py39h22610ee_0
   - tornado=6.3.3=py39h5eee18b_0
@@ -192,6 +211,7 @@ dependencies:
   - urllib3=1.26.16=py39h06a4308_0
   - utf8proc=2.6.1=h27cfd23_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py39h06a4308_1
   - wheel=0.41.2=py39h06a4308_0
   - xxhash=0.8.0=h7f8727e_3
   - xz=5.4.2=h5eee18b_0
