--- a/PH_requirements.yml
+++ b/PH_requirements.yml
@@ -1,4 +1,4 @@
-name: /home/morty/Projects/Thesis/PH
+name: /zhome/75/0/164739/Projects/Thesis/PH
 channels:
   - anaconda
   - conda-forge
@@ -31,8 +31,8 @@ dependencies:
   - brotlipy=0.7.0=py39h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2023.08.22=h06a4308_0
-  - certifi=2023.7.22=py39h06a4308_0
+  - ca-certificates=2023.7.22=hbcca054_0
+  - certifi=2023.7.22=pyhd8ed1ab_0
   - cffi=1.15.1=py39h5eee18b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - comm=0.1.2=py39h06a4308_0
@@ -139,7 +139,7 @@ dependencies:
   - numpy=1.24.3=py39hf6e8229_1
   - numpy-base=1.24.3=py39h060ed82_1
   - openpyxl=3.0.10=py39h5eee18b_0
-  - openssl=3.0.11=h7f8727e_2
+  - openssl=3.1.3=hd590300_0
   - orc=1.7.4=hb3bc3d3_1
   - packaging=23.1=py39h06a4308_0
   - pandas=2.0.3=py39h1128e8f_0
@@ -184,6 +184,7 @@ dependencies:
   - safetensors=0.3.2=py39hb02cf49_0
   - scikit-learn=1.3.1=py39ha22ef79_1
   - scipy=1.11.3=py39h5f9d8c6_0
+  - sentencepiece=0.1.99=py39hdb19cb5_0
   - setuptools=68.0.0=py39h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
   - smart_open=6.4.0=pyhd8ed1ab_0
@@ -221,4 +222,4 @@ dependencies:
   - zipp=3.11.0=py39h06a4308_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
-prefix: /home/morty/Projects/Thesis/PH
+prefix: /zhome/75/0/164739/Projects/Thesis/PH
