--- a/PH_requirements.yml
+++ b/PH_requirements.yml
@@ -152,6 +152,7 @@ dependencies:
   - platformdirs=3.10.0=py39h06a4308_0
   - plotly=5.17.0=pyhd8ed1ab_0
   - prompt-toolkit=3.0.36=py39h06a4308_0
+  - protobuf=3.20.3=py39h227be39_1
   - psutil=5.9.0=py39h5eee18b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
